package com.company.Tetris.TiposPieza;

import com.company.Tetris.*;

public class Cuadrado extends Pieza {

    public Cuadrado() {
        super("amarillo", new Bloque(0, 0), new Bloque(0, 1), new Bloque(1, 0), new Bloque(1, 1));
    }

    public void rotarAntiHorario() {
    }

    public void rotarHorario() {
    }
}